# Ishta

./: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  Plane.cpp  Plane.h  Program  README.md  RandomGenerator.cpp  RandomGenerator.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Renderer.cpp  Renderer.h  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h  compile.sh  main.cpp
Program.dSYM/Contents/Resources/DWARF/: Program
Program.dSYM/Contents/Resources/Relocations/aarch64/: Program.yml
